Enable ntml auth

--- a/Abot.Demo/App.config
+++ b/Abot.Demo/App.config
@@ -64,8 +64,11 @@
       minRetryDelayInMilliseconds="0" />
     <authorization 
       isAlwaysLogin="false" 
-      loginUser="" 
-      loginPassword="" />    
+      isNTLM="true"
+      loginUser="npa" 
+      loginPassword="torell"
+      loginDomain="DESKTOP-020KJIL"
+      />    
     <politeness 
       isRespectRobotsDotTextEnabled="false" 
       isRespectMetaRobotsNoFollowEnabled="false" 
